--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!--			henter media styles og javascript					-->
 		
 		
-		<link rel="stylesheet" href="medie/css/lightgallery.css" type="text/css" media="screen">
+		<!--<link rel="stylesheet" href="medie/css/lightgallery.css" type="text/css" media="screen">
         <link rel="stylesheet" href="medie/css/lg-transitions.css" type="text/css" media="screen">
       	<link rel="stylesheet" href="medie/css/lg-fb-comment-box.css" type="text/css" media="screen">
       	<link rel="stylesheet" href="medie/css/main.css">
